@@ -3,6 +3,8 @@ Changes since version 1.5.1
 - New properties Ice.StdErr and Ice.StdOut to redirect the standard
   error and output streams of a process.
 
+- Added test and demo for using Ice for C# with Glacier.
+
 Changes since version 1.5.0
 ---------------------------
 
